[package]
name = "rustun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
rpassword = "7.3"
russh = "0.50"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["rt", "time", "sync"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.1"

[[bin]]
name = "rustun"
path = "src/bin/rustun.rs"

[[bin]]
name = "rustund"
path = "src/bin/rustund.rs"
